[package]
name = "meshpit"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.6.3"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
ntest = "0.9.5"
once_cell = "1.21.3"
rand = "0.9.2"
rcon = {version = "0.6.0", features = ["rt-async-std"] }
reqwest = { version = "0.13.1", features = ["blocking"]}
tokio = { version = "1.49.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
toml_edit = "0.24.0"
mcdata-rs = "0.1.2"
serde_json = "1.0.149"

# mcdata wants a version of zip that has been yanked, so we have to work around that.
# https://github.com/zip-rs/zip2/issues/337
[patch.crates-io]
zip = { git = "https://github.com/zip-rs/zip2.git", tag = "v2.6.1" }
